[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpp"
dynamic = ["version"]
description = "The x++ programming language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10, <4"
authors = [
    { name = "iiPython", email = "ben@iipython.dev" },
]
keywords = [
    "interpreter",
    "language",
    "parser",
    "xpp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
tests = [
    "rich",
]

[project.scripts]
caffeine = "caffeine.__main__:main"
xpp = "xpp.__main__:main"

[project.urls]
"Bug Reports" = "https://github.com/iiPythonx/xpp/issues"
Homepage = "https://github.com/iiPythonx/xpp"
Source = "https://github.com/iiPythonx/xpp"

[tool.hatch.version]
path = "src/xpp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xpp", "src/caffeine"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
